cmake_minimum_required(VERSION 3.24)
project(Projet_Gestion_d_un_agenda)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projet_Gestion_d_un_agenda
        main.c
        README.md fichier.c ../../Downloads/timer.h ../../Downloads/timer.c ../../Downloads/timer.h ../../Downloads/timer.h ../../Downloads/timer.h ../../Downloads/timer.h)
